force-app/main/default/objects/Paitent__c/Paitent__c.object-meta.xml
<CustomObject>
    <description>patient details</description>
    <label>Patient</label>
    <nameField>
        <label>Paitent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>