force-app/main/default/objects/Paitent__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <label>amount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>