force-app/main/default/objects/Paitent__c/fields/Disease_Detail__c.field-meta.xml
<CustomField>
    <fullName>Disease_Detail__c</fullName>
    <description>detailed info</description>
    <label>Disease Detail</label>
    <type>TextArea</type>
</CustomField>