force-app/main/default/objects/Paitent__c/fields/Patient_id__c.field-meta.xml
<CustomField>
    <fullName>Patient_id__c</fullName>
    <description>patient reference id</description>
    <label>Patient id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>