force-app/main/default/objects/Paitent__c/fields/patient_status__c.field-meta.xml
<CustomField>
    <fullName>patient_status__c</fullName>
    <description>patient status details</description>
    <label>patient status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admitted</fullName>
            </value>
            <value>
                <fullName>discharged</fullName>
            </value>
            <value>
                <fullName>opd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>