force-app/main/default/objects/Paitent__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>egilible</fullName>
            </value>
            <value>
                <fullName>not eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>